src/objects/Partner_Collateral__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Collaterals</relationshipLabel>
        <relationshipName>Zebra_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Partner Collaterals</relationshipLabel>
        <relationshipName>Partner_Collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Partner Admins will indicate the type of document(s) they are uploading</description>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business / Marketing Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Solution Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>This field is created to hold the file name of the attachment.</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>IF(AND($Profile.Name &lt;&gt;  &apos;Partner Admin&apos;,$Profile.Name &lt;&gt;  &apos;Partner Contact&apos;, $Profile.Name &lt;&gt; &apos;Partner Admin Community Login&apos;, $Profile.Name &lt;&gt; &apos;Partner Contact Community Login&apos;), (HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+Attachment__c,$Label.View_PC)),(HYPERLINK(&apos;/Partners/servlet/servlet.FileDownload?file=&apos;+Attachment__c,$Label.View_PC ) ) )</formula>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLogo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo?</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Collateral</label>
    <nameField>
        <displayFormat>PC - {0000}</displayFormat>
        <label>Partner Collateral No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Collaterals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>